tests/paczka1/fuzzy1/36555803.err
Error in line 3: wsp3Tiro A96 59,5
Error in line 4: wsp3Tiro A664 28,0
Error in line 8: tsVu7GTM A96 43,6
Error in line 6: Sn5Qokf A664 87,1
Error in line 26: 2r4AgH A96 29,6
Error in line 31: DDS A96 79,1
Error in line 36: DDS S621 43,4
